--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "colors",
-  "version": "1.0.0-beta.6",
+  "version": "3.9.0",
   "author": "HiØ, Kenneth Dahlstrøm <kenneth.dahlstrom@hiof.no>",
   "repository": {
     "type": "git",
