--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "colors",
-  "version": "1.0.0",
-  "author": "HiØ, Kenneth Dahlstrøm <kenneth.dahlstrom@hiof.no>",
+  "version": "1.1.0",
+  "author": "HiØ, Kenneth Lindbeck-Dahlstrøm <kld@hiof.no>",
   "repository": {
     "type": "git",
     "url": "https://github.com/hiof/colors.git"
   },
   "contributors": [
     {
-      "name": "Kenneth Dahlstrøm",
-      "email": "kenneth.dahlstrom@hiof.no"
+      "name": "Kenneth Lindbeck-Dahlstrøm",
+      "email": "kld@hiof.no"
     }
   ],
   "devDependencies": {
@@ -29,5 +29,5 @@
   "dependencies": {
     "bower": "1.3.9"
   },
-  "license": "GNU"
+  "license": "GPL-3.0"
 }
